# cem-sim-

./: README.md
data/: README.md  run_log  run_log.jsonl
firmware/: CMakeLists.txt  README.md  cem_firmware_base.c
firmware/include/: cem.h  cem_scheduler.h
firmware/src/: cem.c  cem_scheduler.c  cli.c  hal_stub.c  main.c
viz/: app.js  index.html
